# impatience-lab

./: .gitignore  Makefile  README.md  book.json  index.html  package-lock.json  package.json  pyproject.toml  search_index.json
.github/workflows/: ci.yml
docs/: README.md  SUMMARY.md
docs/python/: MaternalAge.md  README.md  Tutorial.md
python/: MaternalAge.html  Tutorial.html  index.html
src/maternal_age/: analysis.py  pyproject.toml
src/python/tutorial/: bmi.py  bmi_func.py  pyproject.toml
