[tool.poetry]
name = "impatience-lab"
version = "0.1.0"
description = ""
authors = ["takahiro miura <takamiura12@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
