[tool.poetry]
name = "maternal_age"
version = "0.1.0"
description = ""
authors = ["takahiro miura <takamiura12@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.dev-dependencies]
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
